--- a/staffapp/staffapp.csproj
+++ b/staffapp/staffapp.csproj
@@ -52,12 +52,6 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="Form2.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Form2.Designer.cs">
-      <DependentUpon>Form2.cs</DependentUpon>
-    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="staffappDataSet.Designer.cs">
@@ -65,11 +59,13 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>staffappDataSet.xsd</DependentUpon>
     </Compile>
+    <Compile Include="staffappDataSet1.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>staffappDataSet1.xsd</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Form2.resx">
-      <DependentUpon>Form2.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -99,6 +95,17 @@
     </None>
     <None Include="staffappDataSet.xss">
       <DependentUpon>staffappDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="staffappDataSet1.xsc">
+      <DependentUpon>staffappDataSet1.xsd</DependentUpon>
+    </None>
+    <None Include="staffappDataSet1.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>staffappDataSet1.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="staffappDataSet1.xss">
+      <DependentUpon>staffappDataSet1.xsd</DependentUpon>
     </None>
   </ItemGroup>
   <ItemGroup>
